Fixed problem with visible shadow after close navigation

--- a/src/components/Basic/Nav/src/Nav.module.scss
+++ b/src/components/Basic/Nav/src/Nav.module.scss
@@ -56,13 +56,15 @@ $nav-height: 60px;
 	overflow: hidden;
 	padding: 20px;
 	background-color: var(--navigation-list-background);
-	box-shadow: var(--navigation-list-shadow) 0px 4px 20px;
-	transition: left 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+	box-shadow: none;
+	transition: left 0.3s cubic-bezier(0.4, 0, 0.2, 1),
+		box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 	@include zIndex(Nav);
 
 	&.open {
 		left: 0;
 		overflow: auto;
+		box-shadow: var(--navigation-list-shadow) 0px 4px 20px;
 	}
 
 	@media (min-width: getBreakpoint(laptop)) {
